# ECE420FinalProject

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/src/app/: app.cpp  app.h
app/src/main/cpp/src/audio/: audio.cpp  audio.h  midi.h  note.cpp  note.h  pianoSample.h  tdpsola.cpp  tdpsola.h
app/src/main/cpp/src/image/: detection.cpp  detection.h  image.cpp  image.h  img_storage.cpp  img_storage.h  matrix.h  matrix.hpp
app/src/main/cpp/src/util/: log.h  rate.cpp  rate.h  stream.h  stream.hpp
app/src/main/java/com/example/ece420finalproject/: MainActivity.java
app/src/main/res/drawable/: capture_button_gradient.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
